CR-2002-07-04-0  Enhancem.: I18N : added message ids (part 1)


AS-2002-07-04-2  CVS        Created V53p1_rc1_TAG and V53p1_rc1_BRANCH
----------------------------------------------------------------------

JG-2002-07-02-0: Bugfix:    qrsh -inherit failed with error 
                            "COMMPROC ALREADY REGISTERED"
                 Issue:     #303
                 Changed:   qsh

AH-2002-07-02-0: Bugfix:    Added missing newline character to error msg.
                 Changed:   qstat, qconf
                            
AH-2002-06-27-0: Enhancem.: Improved load alarm/suspend alarm diagnosis 
                            messages
                 Changed:   sge_schedd
                            
CR-2002-06-26-0: Testsuite: - new default parameter for wait_for_jobpending()
                              (return if job is already started)  
                 Enhancem.: - changed timeout values for access_list and
                              project_acces_lists test   

CR-2002-06-25-1: Bugfix:    script syntax error in exec host installation
                 Issue:     #297
                 Bugtraq:   #4705893

AA-2002-06-19-0: Change:    i18n gettext build script

CR-2002-06-17-2: Bugfix:    removed old i18n setup code

CR-2002-06-17-1: Bugfix:    Don't produce infotext error message "Binary not
                            compiled with gettext!"

AA-2002-06-14-0: Bugfix:    Job dependency display in qmon (not displayed)
                 Issue:     #275
                 Bugtraq:   #4706929
		 Changes:   qmon

CR-2002-06-13-5: Testsuite: testing issue #140 also for pending jobs
                 Enhancem.: 

JG-2002-06-13-0: Enhancem.  qtcsh: If a command is started in the background 
                            using qrsh, the qrsh option -nostdin is used to 
                            avoid qrsh being suspended.
                 Issue:     #287
                 Bugtraq:   #4701640

CR-2002-06-13-4: Testsuite: merged qrsh test for hold_jid and h option from