@@ -1,3 +1,6 @@
+CR-2002-07-04-1  Enhancem.: I18N : removed redefined message macro
+                                   definitions (part 2)
+
 CR-2002-07-04-0  Enhancem.: I18N : added message ids (part 1)
 
 
